# pf-lab-test

./: .pre-commit-config.yaml  README.md  author.txt  pyproject.toml
.github/actions/run-linters/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
task1/: task1.py
task2/: task2.py
task3/: task3.py
task4/: task4.py
tests/: test_task1.py
